# api-pour-analystes

./: .gitignore  Makefile  README.md  TODO.md  justfile  pyproject.toml
assets/: powerquery_example.m
data/: generate_data.py  ventes_2024_2025.parquet
src/api/: main.py
src/api/models/: schemas.py
src/api/routes/: ventes.py
src/api/services/: analyse.py
src/dashboard/: app.py
tests/: conftest.py  test_api.py
