[project]
name = "fastapi-data-analyst"
version = "1.0.0"
description = "Démo API pour data analysts - Newsletter DataGyver #11"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "plotly>=5.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
